...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:text="Fill-in Route Information Below:"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/routeNamePage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/startLocationName"
...
                android:checked="true"
                android:text="Hilly"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="270dp" />

            <RadioButton
                android:id="@+id/radio_flat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Flat"
                tools:layout_editor_absoluteX="134dp"
                tools:layout_editor_absoluteY="270dp" />

        </RadioGroup>

        <RadioGroup
...
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/groupDifficulty" />

        <Button
            android:id="@+id/button_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="pressOK"
            android:text="@android:string/ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
